# rubicon-case-study

./: .env.example  AOI_Rubicon.geojson  README.md  app.py  pyproject.toml  requirements.txt
notebooks/: brouillon_section_one.ipynb  brouillon_section_two.ipynb  cleaned_section_one.ipynb  cleaned_section_two.ipynb  section_one.ipynb  section_three.ipynb  section_two.ipynb
src/rubicon_cs/: evalscripts.py  main.py  utils.py
